<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.eventme.fragments.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_navActivity"
            app:destination="@id/navActivity" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.eventme.fragments.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <activity
        android:id="@+id/navActivity"
        android:name="com.example.eventme.NavActivity"
        android:label="activity_nav"
        tools:layout="@layout/activity_nav" />
</navigation>